# clean-robot-desktop

./: .gitignore  README.md
scripts/: cartographer_mapping.sh  cartographer_save_map.sh  clean_desktop.sh  get_pose.sh  keyboard_control.sh  navigation_carto.sh  usb_cam.sh
src/clean_desktop/: CMakeLists.txt  package.xml
src/clean_desktop/launch/: desktop_clean.launch
src/clean_desktop/params/: points.yaml
src/clean_desktop/scripts/: clean_desk_robot.py  slam_task.py
src/range_sensor_layer/scripts/: send_message.py
src/robot_base/zoo_bringup/: CMakeLists.txt  package.xml
src/robot_base/zoo_bringup/launch/: arm_control.launch  bringup_w2a.launch  bringup_w2c.launch  bringup_w3s.launch  bringup_w4.launch  robot_pose_ekf.launch
src/robot_base/zoo_bringup/msg/: SingleServo.msg
src/robot_base/zoo_bringup/scripts/: odom_ekf.py
src/robot_base/zoo_bringup/src/: base_driver.cpp  base_driver_config.cpp  s2a_arm_driver.cpp  serial_transport.cpp  simple_dataframe_master.cpp
src/robot_base/zoo_robot/: CMakeLists.txt
src/robot_base/zoo_robot/scripts/: get_pos_demo.py  go_and_stop.py  move_linear.py
src/robot_slam/launch/: cartographer_localization.launch  cartographer_mapping.launch  navigation_carto_w2c.launch  navigation_carto_w3s.launch  navigation_w3s.launch  servo_controller.launch  view_fullpath.launch  view_nav.launch
src/robot_slam/maps/: carto.pbstream  carto.pgm  carto.yaml  my_lab.pgm  my_lab.yaml  my_lab_end.yaml
src/robot_slam/rviz/: view_fullpath.rviz  view_gmapping.rviz  view_navigation.rviz
src/robot_slam/scripts/: servo_controller.py
(+28 files in other folders)
